--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@rails/webpacker": "^5.4.4",
     "axios": "^1.8.4",
+    "cypress": "^14.3.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
