--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@rails/webpacker": "^5.4.4",
     "axios": "^1.8.4",
     "cypress": "^14.3.0",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
